# vk_demo

./: .gitignore  CMakeLists.txt  README.md  download_assets.sh
base/: CMakeLists.txt  VulkanTexture.cpp  VulkanUIOverlay.cpp  VulkanUIOverlay.h  VulkanglTFModel.cpp  vulkanexamplebase.cpp  vulkanexamplebase.h
data/shaders/glsl/indirectdraw/: indirectdraw_white.frag  indirectdraw_white.frag.spv
data/shaders/glsl/normal_texture/: base.vert.spv  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv
data/shaders/glsl/parallax_mapping/: base.frag  base.frag.spv  base.vert  base.vert.spv  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv
data/shaders/glsl/shadow_mapping_direct/: base.frag  base.frag.spv  shadowMap.vert  shadowMap.vert.spv
data/shaders/glsl/shadow_mapping_omni/: base.frag  base.frag.spv  base.vert  base.vert.spv  shadowMap.frag  shadowMap.frag.spv  shadowMap.vert  shadowMap.vert.spv
data/shaders/glsl/shadow_mapping_spot/: base.frag  base.frag.spv
examples/geometry_shader/: main.cpp
examples/indirect_draw/: main.cpp
examples/normal_texture/: main.cpp
examples/parallax_mapping/: main.cpp
examples/shadow_map_direct/: CMakeLists.txt  main.cpp
examples/shadow_map_omni/: main.cpp
examples/shadow_map_spot/: main.cpp
examples/triangle/: CMakeLists.txt  main.cpp
